--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -28,8 +28,7 @@ main {
     font-weight: 300;
 }
 
-.duvidas .titulo,
-.duvidas .descricao {
+.duvidas div {
     padding-right: 50px;
     max-width: 600px;
 }
